--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           alt=""
         />
       </section>
-      <section class="faq">
+      <section class="faq" style="display: none">
         <center>
           <style>
             #dexscreener-embed {
