--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="shortcut icon" href="logo.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <style>
+      .footer {
+        position: relative;
+        background: #c9732e;
+        padding: 92px 0;
+      }
       .ttl {
         font-size: 120px;
         color: #000;
@@ -89,7 +94,7 @@
             </a>
             <a
               class="hero__social hero__social_uni"
-              href="www.tiktok.com/@komashibaeth"
+              href="https://www.tiktok.com/@komashibaeth"
               target="_blank"
             >
               <img src="/tik.png" style="width: 78px" alt="" />
@@ -260,31 +265,15 @@
               </p>
             </div>
           </div>
-          <iframe
-            class="buy__iframe"
-            src="https://app.uniswap.org/#/swap?outputCurrency=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-            height="560px"
-            width="100%"
-          ></iframe>
-        </div>
-      </section>
-      <section class="available">
-        <img class="available__top" src="assets/img/available-top.svg" alt="" />
-        <div class="available__container container">
-          <img
-            class="available__illustration"
-            style="width: 400px"
-            src="/ft.png"
-            alt=""
-          />
-          <div>
+
+          <div class="buy__iframe">
             <blockquote
               class="tiktok-embed"
               cite="https://www.tiktok.com/@shibakoma"
               data-unique-id="shibakoma"
               data-embed-from="embed_page"
               data-embed-type="creator"
-              style="max-width: 780px"
+              style="max-width: 780px; border-radius: 10px"
             >
               <section>
                 <a
@@ -296,6 +285,24 @@
             </blockquote>
             <script async src="https://www.tiktok.com/embed.js"></script>
           </div>
+          <!-- <iframe
+           
+            src="https://app.uniswap.org/#/swap?outputCurrency=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+            height="560px"
+            width="100%"
+          ></iframe> -->
+        </div>
+      </section>
+      <section class="available">
+        <img class="available__top" src="assets/img/available-top.svg" alt="" />
+        <div class="available__container container">
+          <img
+            class="available__illustration"
+            style="width: 400px"
+            src="/ft.png"
+            alt=""
+          />
+
           <div class="available__items">
             <a
               href="https://app.uniswap.org/swap?inputCurrency=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
@@ -460,7 +467,7 @@
             </a>
             <a
               class="footer__social footer__social_uni"
-              href="www.tiktok.com/@komashibaeth"
+              href="https://www.tiktok.com/@komashibaeth"
               target="_blank"
             >
               <img src="/tik.png" style="width: 60px" alt="" />
