--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <img
             class="available__illustration"
             style="width: 400px"
-            src="/ft.png"
+            src="/logo.png"
             alt=""
           />
 
