--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   </div>
                   <div class="tokenomics__item">
                     <span>supply</span>
-                    <strong>420,69 B</strong>
+                    <strong>100M</strong>
                   </div>
                   <div class="tokenomics__item">
                     <span>OWNERSHIP</span>
@@ -223,45 +223,7 @@
         <img class="buy__planet" src="assets/img/planet.svg" alt="" />
         <img class="buy__rocket" src="/logo.png" alt="" />
         <div class="buy__container container">
-          <div class="buy__steps">
-            <div class="buy__step">
-              <span class="buy__number">1</span>
-              <div class="buy__title">Create a wallet</div>
-              <p class="buy__text">
-                Download the MetaMask extension from the official website and
-                install it in your browser. Fund it by transferring ETH from an
-                exchange or another wallet.
-              </p>
-            </div>
-            <div class="buy__step">
-              <span class="buy__number">2</span>
-              <div class="buy__title">Connect to DEX</div>
-              <p class="buy__text">
-                Connect to a decentralized exchange (DEX) like Uniswap,
-                SushiSwap, or 1inch. Open the DEX website and click on "Connect
-                Wallet". Then select MetaMask.
-              </p>
-            </div>
-            <div class="buy__step">
-              <span class="buy__number">3</span>
-              <div class="buy__title">Swap ETH for $KOMA</div>
-              <p class="buy__text">
-                To swap ETH for KOMA, select ETH in the "from" field and choose
-                KOMA in the "to" field using our contract address. Enter the
-                amount of tokens you want & press swap.
-              </p>
-            </div>
-            <div class="buy__step">
-              <span class="buy__number">4</span>
-              <div class="buy__title">Verify & manage tokens</div>
-              <p class="buy__text">
-                Verify your transaction status in MetaMask under the "Activity"
-                tab or on Etherscan using your Ethereum address.
-              </p>
-            </div>
-          </div>
-
-          <div class="buy__iframe">
+          <div class="buy__iframe" style="width: 100%">
             <blockquote
               class="tiktok-embed"
               cite="https://www.tiktok.com/@shibakoma"
