--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </a>
             <a
               class="hero__social hero__social_dextools"
-              href="https://www.dextools.io/app/en/ether/pair-explorer/0x5A12975bF0158C9C3B23622f44917D113F31842D?t=1724869601798"
+              href="https://www.dextools.io/app/en/ether/pair-explorer/0x11c3e34fd9d255a67f4229c6ed25ea6551ef40a0?t=1728063710542?t=1724869601798"
               target="_blank"
             >
               <svg
@@ -262,19 +262,19 @@
 
           <div class="available__items">
             <a
-              href="https://app.uniswap.org/swap?inputCurrency=0x5A12975bF0158C9C3B23622f44917D113F31842D"
+              href="https://dexscreener.com/eth/0x5A12975bF0158C9C3B23622f44917D113F31842D"
               target="_blank"
             >
               <img src="assets/img/available/poloniex.svg" alt="" />
             </a>
             <a
-              href="https://www.dextools.io/app/en/ether/pair-explorer/0x5A12975bF0158C9C3B23622f44917D113F31842D"
+              href="https://www.dextools.io/app/en/ether/pair-explorer/0x11c3e34fd9d255a67f4229c6ed25ea6551ef40a0?t=1728063710542"
               target="_blank"
             >
               <img src="assets/img/available/mexc.svg" alt="" />
             </a>
             <a
-              href="https://dexscreener.com/eth/0x5A12975bF0158C9C3B23622f44917D113F31842D"
+              href="https://app.uniswap.org/swap?inputCurrency=0x5A12975bF0158C9C3B23622f44917D113F31842D"
               target="_blank"
             >
               <img src="assets/img/available/lbank.svg" alt="" />
@@ -402,7 +402,7 @@
             </a>
             <a
               class="footer__social footer__social_dextools"
-              href="https://www.dextools.io/app/en/ether/pair-explorer/0x5A12975bF0158C9C3B23622f44917D113F31842D?t=1724869601798"
+              href="https://www.dextools.io/app/en/ether/pair-explorer/0x11c3e34fd9d255a67f4229c6ed25ea6551ef40a0?t=1728063710542?t=1724869601798"
               target="_blank"
             >
               <svg
